inventory/src/main/java/com/example/inventory/error/ProductServiceUnavailableException.java
package com.example.inventory.error;

public class ProductServiceUnavailableException extends RuntimeException {
    public ProductServiceUnavailableException(String message) {
        super(message);
    }
}
